# Wxxy-CampusLogin

./: .gitignore  CHANGELOG.md  CODE_WIKI.md  README.md  RELEASE_v2.1.7.md  RELEASE_v2.2.2.md  backend-modular-evaluation-report.md  backend-refactor-implementation-plan.md  v2.1.7-更新日志.md  version.json
archive/asar_restore/校园网登录助手-win32-x64/resources/: app.asar
docs/plans/: 2026-06-09-per-profile-dns.md  2026-06-12-log-system-optimization.md
docs/superpowers/plans/: 2026-05-29-dead-code-cleanup.md  2026-05-30-frontend-animation-upgrade.md  2026-05-31-campus-network-name-detection-improvement.md  2026-06-05-120hz-adaptive-animation.md  2026-06-06-apple-panel-animation.md  2026-06-06-log-clear-animation.md  2026-06-06-v2.2.2-feature-enhancement.md
docs/superpowers/specs/: 2026-05-29-dead-code-cleanup-design.md  2026-05-30-card-interaction-upgrade-design.md  2026-05-30-frontend-animation-upgrade-design.md  2026-06-05-120hz-adaptive-animation-design.md  2026-06-06-apple-panel-animation-design.md  2026-06-06-log-clear-animation-design.md  2026-06-06-v2.2.2-feature-enhancement-design.md
installer-build/win-unpacked/resources/: app.asar
release-build/校园网登录助手-win32-x64/resources/: app.asar
scripts/: add-defender-exclusion.ps1  test-update-download.ps1
tauri-app/: build.ps1  package.json
tauri-app/frontend/: about-preview.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
tauri-app/frontend/src/: App.tsx  index.css  main.tsx
tauri-app/frontend/src/account/: AccountPanel.tsx  index.ts  types.ts  useAccount.ts
tauri-app/frontend/src/auth/: AboutDialog.tsx  DashboardPanel.tsx  index.ts  types.ts  useAuth.ts
tauri-app/frontend/src/components/: ErrorBoundary.tsx
tauri-app/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
tauri-app/src-tauri/.cargo/: config.toml
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: config.rs  crypto_utils.rs  http_timing.rs  lib.rs  logger.rs  main.rs  network.rs
tauri-app/src-tauri/src/account/: crypto.rs  manager.rs  mod.rs
tauri-app/src-tauri/src/app/: heartbeat.rs  mod.rs  shortcut.rs  shutdown.rs  startup.rs  tray.rs  window.rs
tauri-app/src-tauri/src/auth/: dual_adapter_executor.rs  failure_tracker.rs  mod.rs  portal.rs  protocol.rs  service.rs  session.rs  traits.rs
tauri-app/src-tauri/src/commands/: account.rs  adapter_watch.rs  auto_exit.rs  auto_login.rs  background.rs  config_cmd.rs  latency.rs  login.rs  mod.rs  network_cmd.rs  state.rs  system.rs  updater.rs
tauri-app/src-tauri/src/config/: mod.rs  model.rs  persist.rs  validate.rs
tauri-app/src-tauri/src/infra/: command_context.rs  events.rs  lifecycle.rs  logger.rs  mod.rs  notification.rs  state.rs  task_manager.rs
tauri-app/src-tauri/src/infra/state/: exit.rs  mod.rs  network.rs  store.rs
tauri-app/src-tauri/src/monitor/: adapter_watch.rs  auto_auth.rs  background_emit.rs  campus_check.rs  latency.rs  mod.rs  portal_check.rs  quality_scheduler.rs  watcher.rs
tauri-app/src-tauri/src/network/: adapter.rs  adapter_cache.rs  cache.rs  client.rs  dhcp.rs  dns.rs  login_request.rs  mod.rs  portal.rs  quality.rs  subnet.rs  timing.rs
tauri-app/src-tauri/src/network/discovery/: mod.rs  registry.rs  windows.rs
tauri-app/src-tauri/src/platform/: autostart.rs  dns_config.rs  elevation.rs  gpu.rs  mod.rs
tauri-app/src-tauri/src/update/: mod.rs  updater.rs
(+109 files in other folders)
