[package]
name = "campus-login"
version = "2.1.4"
description = "校园网登录助手"
authors = ["you"]
edition = "2021"

[lib]
name = "campus_login_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "macros", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "http2", "rustls-tls"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
rand = "0.8"
dirs = "6"
lazy_static = "1.5"
base64 = "0.22"
regex = "1"
urlencoding = "2"
chrono = "0.4"
open = "5"
url = "2"
surge-ping = "0.8"
parking_lot = "0.12"
arc-swap = "1"
thiserror = "2"
dashmap = "6"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
] }

[profile.release]
lto = "thin"
codegen-units = 16
opt-level = 3
strip = true
