[package]
name = "campus-login"
version = "2.2.8"
description = "校园网登录助手"
authors = ["you"]
edition = "2021"

[lib]
name = "campus_login_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls", "charset"] }
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pki-types = "1"
webpki-roots = "0.26"
hickory-resolver = { version = "0.24", features = ["tokio-runtime"] }
dirs = "6"
lazy_static = "1.5"
base64 = "0.22"
regex = "1"
urlencoding = "2"
chrono = "0.4"
open = "5"
url = "2"
surge-ping = "0.8"
parking_lot = "0.12"
arc-swap = "1"
thiserror = "2"
dashmap = "6"
sha2 = "0.10"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
webview2-com-sys = "0.38"
windows-core = "0.61"
windows = { version = "0.58", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
